spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFixRel__c/GrvFixRel__c.object-meta.xml
<CustomObject>
    <label>GRV Fix Rel</label>
    <nameField>
        <label>GRV Fix Rel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV Fix Rels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>