spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFixRel__c/fields/GrvRelDate__c.field-meta.xml
<CustomField>
    <fullName>GrvRelDate__c</fullName>
    <label>Grv Rel Date</label>
    <type>Date</type>
</CustomField>