spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFixRel__c/fields/GrvRelDecimal__c.field-meta.xml
<CustomField>
    <fullName>GrvRelDecimal__c</fullName>
    <label>Grv Rel Decimal</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>