spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFixRel__c/fields/GrvRelText__c.field-meta.xml
<CustomField>
    <fullName>GrvRelText__c</fullName>
    <label>Grv Rel Text v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>